resilient/tests/snapshots/diagnostics_snapshots__runtime_unwrap_on_err@runtime_unwrap_on_err.snap
---
source: tests/diagnostics_snapshots.rs
description: "fn main(int _d) {\n    let x = unwrap(Err(\"boom\"));\n    return 0;\n}\nmain(0);\n"
expression: output
---
Error: <tmp>.rs:5:5: Runtime error: unwrap called on Err("boom")
Runtime error: unwrap called on Err("boom")
   main(0);
       ^
